Added URL in library.properties

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Antares <support@antares.id>
 sentence=A library to simplify the process of fetching/deploying data to Antares IoT platform via MQTT
 paragraph=A library to simplify the process of fetching/deploying data to Antares IoT platform via MQTT
 category=Communication
-url=
+url=https://github.com/vmasdani/antares-esp8266-mqtt
 architectures=esp8266
