--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Antares ESP8266 MQTT
 version=0.9.0
 author=Antares
 maintainer=Antares <support@antares.id>
-sentence=A library to simplify the process of fetching/deploying data to Antares IoT platform via MQTT
-paragraph=A library to simplify the process of fetching/deploying data to Antares IoT platform via MQTT
+sentence=A library to simplify the process of subscribing and publishing data to Antares IoT platform via MQTT on ESP8266
+paragraph=A library to simplify the process of subscribing and publishing data to Antares IoT platform via MQTT on ESP8266
 category=Communication
-url=https://github.com/vmasdani/antares-esp8266-mqtt
+url=https://github.com/antaresdocumentation/antares-esp8266-mqtt
 architectures=esp8266
